<resources>
    <string name="app_name">Hackathon</string>
    <string name="txt_login_title">text title helowjqwnj</string>
    <string name="login_txt">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="txt_create">Create</string>
    <string name="txt_register_title">hghghghghghg</string>
    <string name="txt_username">Username</string>
    <string name="you_have_an_account">Do you have an account?</string>
    <string name="email_empty_error_message"> Please enter an email address </string>
    <string name="empty_fields_error_message"> Please fill all empty fields address </string>
    <string name="invalid_email_error_message" > Please provide a valid email address </string>

</resources>
